# face-manager

./: .gitignore  CMakeLists.txt  README.md  benchmark-results-x86_64.csv  benchmark-results-x86_64.ods  demo-util.cpp  demo-util.h  face-manager.cbp  facedetector.cpp  facedetector.h  imagelogger.cpp  imagelogger.h  manager-benchmark.cpp  manager-demo.cpp  manager.cpp  manager.h  micro-benchmarks.cpp  mkpath.c  mkpath.h  motiondetector.cpp  motiondetector.h  process-file.sh  run-benchmarks.sh  run-manager-benchmark.sh  util.h
benchmark-results/: benchmark-results-armv7l-1296x972.csv  benchmark-results-armv7l-1296x972.ods  benchmark-results-armv7l-2016x1512.csv  benchmark-results-armv7l-2016x1512.ods  benchmark-results-armv7l-4032x3024.csv  benchmark-results-armv7l-4032x3024.ods  benchmark-results-x86_64-gtx1080-1296x972.csv  benchmark-results-x86_64-gtx1080-1296x972.ods  benchmark-results-x86_64-gtx1080-2016x1512.csv  benchmark-results-x86_64-gtx1080-2016x1512.ods  benchmark-results-x86_64-gtx1080-4032x3024.csv  benchmark-results-x86_64-gtx1080-4032x3024.ods  benchmark-results.ods  manager-benchmark-results-x86_64-gtx1080.csv  manager-benchmark-results.ods
